--- a/apps/worker/templates/login.html
+++ b/apps/worker/templates/login.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <!-- Css card login e registro -->
+    {% load static %}
     <style>
         :root {
             --form-width: 500px;
@@ -15,10 +14,10 @@
             --title-font-size: 2rem;
             --button-font-size: 1.4rem;
             --button-padding: 1rem 2rem;
-            --primary-color: #00bfff;
-            --background-color: #1a1a1a;
-            --input-background: #333;
-            --input-text-color: #fff;
+            --primary-color: #2092c6;
+            --background-color: #fff;
+            --input-background: #e5e5e5;
+            --input-text-color: #000000;
             --input-placeholder-color: rgba(255, 255, 255, 0.5);
             --border-radius: 10px;
         }
@@ -30,7 +29,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #2a2b38;
+            background: linear-gradient(135deg, #b0e0f0, #d4f7b4);
             color: #fff;
         }
 
@@ -77,9 +76,16 @@
             animation: pulse 1s linear infinite;
         }
 
+        .logo {
+            margin-left: 15px;
+            width: 50px; /* Ajuste o tamanho conforme necessário */
+            height: 50px;
+            object-fit: contain;
+        }
+
         .message, .signin {
             font-size: 1.2rem;
-            color: rgba(255, 255, 255, 0.7);
+            color: #17202a;
         }
 
         .signin {
@@ -161,7 +167,7 @@
         }
 
         .submit:hover {
-            background-color: #00bfff96;
+            background-color: #40a1ae ;
         }
 
         @keyframes pulse {
@@ -209,6 +215,67 @@
         .modal-title {
             color: black;
         }
+
+        .btn-link{
+            color: #2092c6;
+        }
+
+        .btn-link:hover{
+            color: #40a1ae;
+        }
+
+        .btnS {
+    background-color: #2092c6;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+
+btnS + btnS {
+    margin-left: 10px;
+}
+
+.btnS:hover {
+    background-color: #40a1ae;
+}
+
+.btnS {
+    width: 120px;
+    height: 45px;
+    display: inline-block;
+}
+
+ .btnS2 {
+    background-color: #717d7e;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+btnS2 + btnS2 {
+    margin-left: 10px;
+}
+
+
+.btnS2:hover {
+    background-color: #616b6c;
+}
+
+.btnS2 {
+    width: 120px;
+    height: 45px;
+    display: inline-block;
+}
+
     </style>
 
 </head>
@@ -217,16 +284,18 @@
     <form class="form" action="{% url 'log' %}" method="POST">
         {% csrf_token %}
 
-        <p class="title">LOGAR-SE</p>
-        <p class="message">Preencha os dados para acessar a sua seção</p>
+        <p class="title">
+            Faça Login!
+        </p>
+        <p class="message">Preencha os dados abaixo para acessar a sua área de trabalho.</p>
         <div class="flex"></div>
         <label>
             <input class="input" type="text" placeholder="" name="log">
-            <span>APELIDO:</span>
+            <span>Usuário:</span>
         </label>
         <label>
             <input class="input" type="password" placeholder="" name="logpass">
-            <span>SENHA:</span>
+            <span>Senha:</span>
         </label>
 
         {% if error_message %}
@@ -235,7 +304,7 @@
 
         <button class="submit">Acessar</button>
         <a id="triggerModal" href="#" class="btn-link">Esqueci a Senha</a>
-        <p class="signin">Não possui conta? <a href="{% url 'registro' %}">REGISTRAR-SE</a></p>
+        <p class="signin">Não possui conta? <a href="{% url 'registro' %}">Registrar-se</a></p>
     </form>
 
     <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel"
@@ -243,7 +312,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="errorModalLabel">Lembra Senha e Apelido</h5>
+                    <h5 class="modal-title" id="errorModalLabel">Lembrar Senha e Usuário</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -254,8 +323,8 @@
                         <label for="email" style="color: black">Email: <input type="email" id="email" class="form-control" name="email"></label>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Salvar</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                    <button type="submit" class="btnS">Salvar</button>
+                    <button type="button" class="btnS2" data-dismiss="modal">Fechar</button>
                     </form>
                 </div>
             </div>
@@ -263,14 +332,12 @@
     </div>
 </div>
 
-<!-- Notificação -->
 <div class="alert alert-dismissable" id="notificationAlert" style="display: none;">
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
     <h4 id="alertHeading">Alert!</h4>
     <strong id="alertMessage">Warning!</strong>
 </div>
 
-<!-- Script de modal -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -284,7 +351,7 @@ $(document).ready(function () {
     $('#passwordForm').on('submit', function (e) {
         e.preventDefault();
         var email = $('#email').val();
-        
+
         $('#errorModal').modal('hide');  // Fechar o modal imediatamente
 
         $.ajax({
