--- a/apps/worker/templates/worker/registro.html
+++ b/apps/worker/templates/worker/registro.html
@@ -1,233 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+{% load compress %}
+
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <style>
-        :root {
-            --form-width: 500px;
-            --input-height: 1.5rem;
-            --input-font-size: 1.2rem;
-            --title-font-size: 2rem;
-            --button-font-size: 1.4rem;
-            --button-padding: 1rem 2rem;
-            --primary-color: #2092c6;
-            --background-color: #fff;
-            --input-background: #e5e5e5;
-            --input-text-color: #000000;
-            --input-placeholder-color: rgba(255, 255, 255, 0.5);
-            --border-radius: 10px;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #b0e0f0, #d4f7b4);
-            color: #000000;
-            overflow: hidden;
-        }
-
-        .form {
-            width: var(--form-width);
-            max-width: 800px;
-            padding: 40px;
-            border-radius: 20px;
-            position: relative;
-            background-color: var(--background-color);
-            color: #000000;
-            border: 1px solid #333;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .title {
-            font-size: var(--title-font-size);
-            font-weight: 600;
-            letter-spacing: -1px;
-            position: relative;
-            display: flex;
-            align-items: center;
-            padding-left: 30px;
-            color: var(--primary-color);
-        }
-
-        .title::before, .title::after {
-            width: 18px;
-            height: 18px;
-            position: absolute;
-            content: "";
-            border-radius: 50%;
-            background-color: var(--primary-color);
-        }
-
-        .title::before {
-            left: 0;
-        }
-
-        .title::after {
-            right: 0;
-            animation: pulse 1s linear infinite;
-        }
-
-        .message, .signin {
-            font-size: 1.2rem;
-            color: #000000;
-        }
-
-        .signin {
-            text-align: center;
-        }
-
-        .signin a {
-            color: var(--primary-color);
-            text-decoration: none;
-        }
-
-        .signin a:hover {
-            text-decoration: underline;
-        }
-
-        .flex {
-            display: flex;
-            gap: 10px;
-        }
-
-        .flex .flex-item {
-            flex: 1;
-        }
-
-        .flex label {
-            flex: 1;
-            position: relative;
-        }
-
-        .form label {
-            position: relative;
-            width: 100%;
-        }
-
-        .form label .input {
-            background-color: var(--input-background);
-            color: var(--input-text-color);
-            width: 100%;
-            padding: 20px 10px 10px 10px;
-            outline: 0;
-            border: 1px solid rgba(105, 105, 105, 0.4);
-            border-radius: var(--border-radius);
-            font-size: var(--input-font-size);
-            box-sizing: border-box;
-        }
-
-        .form label .input + span {
-            color: var(--input-placeholder-color);
-            position: absolute;
-            left: 10px;
-            top: 10px;
-            font-size: 0.9em;
-            cursor: text;
-            transition: 0.3s ease;
-        }
-
-        .form label .input:placeholder-shown + span {
-            top: 20px;
-            font-size: 1.1em;
-        }
-
-        .form label .input:focus + span,
-        .form label .input:valid + span {
-            color: var(--primary-color);
-            top: 5px;
-            font-size: 0.8em;
-            font-weight: 600;
-        }
-
-        .submit {
-            border: none;
-            outline: none;
-            border-radius: var(--border-radius);
-            color: #fff;
-            font-size: var(--input-font-size);
-            background-color: var(--primary-color);
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            width: 100%;
-            height: 3rem;
-            box-sizing: border-box;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .submit:hover {
-            background-color: #40a1ae;
-        }
-
-        @keyframes pulse {
-            from {
-                transform: scale(0.9);
-                opacity: 1;
-            }
-
-            to {
-                transform: scale(1.8);
-                opacity: 0;
-            }
-        }
-
-        @media (max-width: 768px) {
-            :root {
-                --form-width: 90%;
-                --input-font-size: 1rem;
-                --title-font-size: 1.6rem;
-                --button-font-size: 1.2rem;
-                --button-padding: 0.8rem 1.6rem;
-            }
-
-            .flex {
-                flex-direction: column;
-            }
-        }
-    </style>
-
-    <style>
-        .modal {
-            display: none;
-        }
-
-        .alert {
-            display: none;
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            z-index: 1050;
-            width: 300px;
-        }
-
-        .modal-title {
-            color: black;
-        }
-    </style>
-
+    {% compress css %}
+    <link rel="stylesheet" href="{% static 'css/registro.css' %}">
+    <link rel="stylesheet" href="{% static 'css/modal.css' %}">
+    {% endcompress %}
 </head>
 <body>
 <div>
     <form class="form" action="{% url 'registro' %}" method="POST">
         {% csrf_token %}
-
         <p class="title">Registre-se!</p>
         <p class="message">Preencha os dados abaixo para completar o registro.</p>
+        
         <div class="flex">
             <label class="flex-item">
-                <input class="input" type="text" placeholder="" name="log" value="{{ form.log.value|default_if_none:'' }}">
+                <input class="input" type="text" name="log" value="{{ form.log.value|default_if_none:'' }}">
                 <span>Usuário:</span>
                 {% if form.log.errors %}
                     <div class="text-danger">
@@ -238,8 +33,9 @@
                 {% endif %}
             </label>
             <label class="flex-item">
-                <input class="input" type="password" placeholder="" name="logpass" value="{{ form.logpass.value|default_if_none:'' }}">
+                <input class="input" type="password" name="logpass" id="logpass" value="{{ form.logpass.value|default_if_none:'' }}">
                 <span>Senha:</span>
+                <i class="toggle-password" onclick="togglePasswordVisibility()" style="cursor: pointer; position: absolute; right: 10px; top: 50%; transform: translateY(-50%);">🔓</i>
                 {% if form.logpass.errors %}
                     <div class="text-danger">
                         {% for error in form.logpass.errors %}
@@ -249,9 +45,10 @@
                 {% endif %}
             </label>
         </div>
+        
         <div class="flex">
             <label class="flex-item">
-                <input class="input" type="text" placeholder="" name="first_name" value="{{ form.first_name.value|default_if_none:'' }}">
+                <input class="input" type="text" name="first_name" value="{{ form.first_name.value|default_if_none:'' }}">
                 <span>Primeiro Nome:</span>
                 {% if form.first_name.errors %}
                     <div class="text-danger">
@@ -262,7 +59,7 @@
                 {% endif %}
             </label>
             <label class="flex-item">
-                <input class="input" type="text" placeholder="" name="last_name" value="{{ form.last_name.value|default_if_none:'' }}">
+                <input class="input" type="text" name="last_name" value="{{ form.last_name.value|default_if_none:'' }}">
                 <span>Ultimo Nome:</span>
                 {% if form.last_name.errors %}
                     <div class="text-danger">
@@ -273,9 +70,10 @@
                 {% endif %}
             </label>
         </div>
+        
         <div class="flex">
             <label class="flex-item">
-                <input class="input" type="text" placeholder="" name="telefone" value="{{ form.telefone.value|default_if_none:'' }}">
+                <input class="input" type="text" name="telefone" value="{{ form.telefone.value|default_if_none:'' }}">
                 <span>Telefone:</span>
                 {% if form.telefone.errors %}
                     <div class="text-danger">
@@ -285,21 +83,11 @@
                     </div>
                 {% endif %}
             </label>
-            <label class="flex-item">
-                <input class="input" type="text" placeholder="" name="cidade" value="{{ form.cidade.value|default_if_none:'' }}">
-                <span>Cidade:</span>
-                {% if form.cidade.errors %}
-                    <div class="text-danger">
-                        {% for error in form.cidade.errors %}
-                            <p>{{ error }}</p>
-                        {% endfor %}
-                    </div>
-                {% endif %}
-            </label>
         </div>
+        
         <div class="flex">
             <label class="flex-item">
-                <input class="input" type="text" placeholder="" name="email" value="{{ form.email.value|default_if_none:'' }}">
+                <input class="input" type="text" name="email" value="{{ form.email.value|default_if_none:'' }}">
                 <span>Email:</span>
                 {% if form.email.errors %}
                     <div class="text-danger">
@@ -310,9 +98,10 @@
                 {% endif %}
             </label>
         </div>
+        
         <div class="flex">
             <label class="flex-item">
-                <input class="input" type="text" placeholder="" name="cpf" value="{{ form.cpf.value|default_if_none:'' }}">
+                <input class="input" type="text" name="cpf" value="{{ form.cpf.value|default_if_none:'' }}">
                 <span>CPF:</span>
                 {% if form.cpf.errors %}
                     <div class="text-danger">
@@ -325,13 +114,18 @@
         </div>
 
         {% if error_message %}
-        <div class="alert alert-danger" role="alert">
-            {{ error_message }}
-        </div>
+            <div class="alert alert-danger" role="alert">
+                {{ error_message }}
+            </div>
         {% endif %}
+        
         <button class="submit" type="submit">Registrar</button>
         <p class="signin">Já possui uma conta? <a href="{% url 'log' %}">Entrar</a></p>
     </form>
 </div>
+
+<script src="{% static 'js/format.js' %}" defer></script>
+
+<script src="{% static 'js/visibility.js' %}" defer></script>
 </body>
 </html>
