--- a/apps/client/templates/client/buscasCliente/procurarCliente.html
+++ b/apps/client/templates/client/buscasCliente/procurarCliente.html
@@ -32,7 +32,7 @@
                         <th>#</th>
                         <th>Nome</th>
                         <th>CPF</th>
-                        <th>Bairro</th>
+                        <th>Cidade</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
@@ -42,7 +42,7 @@
                         <td><a href="{% url 'dadosCliente' todo.pk %}" class="text-decoration-none">{{ todo.pk }}</a></td>
                         <td><a href="{% url 'dadosCliente' todo.pk %}" class="text-decoration-none">{{ todo.nome }}</a></td>
                         <td>{{ todo.cpf }}</td>
-                        <td>{{ todo.bairro }}</td>
+                        <td>{{ todo.cidade }}</td>
                         <td>
                             <a href="{% url 'cliente_atualizar' pk=todo.pk %}" class="btn btn-secondary btn-sm">
                                 <img src="{% static 'imagens/edit.svg' %}" alt="Editar" style="height: 15px; width: 15px;"> Editar
