--- a/apps/client/templates/client/formsCliente/cadastroCliente_form.html
+++ b/apps/client/templates/client/formsCliente/cadastroCliente_form.html
@@ -27,7 +27,7 @@
 
         <br>
 
-       <a class="btn btn-primary" href="{% url 'homeAdmin' %}">Voltar</a>
+       <a class="btn btn-primary" href="{% url 'home' %}">Voltar</a>
 
     </div>
 
