--- a/apps/service/templates/service/formsVenda/cadastroVendas_form.html
+++ b/apps/service/templates/service/formsVenda/cadastroVendas_form.html
@@ -239,7 +239,7 @@
        </form>
    <br>
 
-       <p><a class="btn btn-primary" href="{% url 'homeAdmin' %}">Voltar</a></p>
+       <p><a class="btn btn-primary" href="{% url 'home' %}">Voltar</a></p>
    </div>
 </div>
 
