--- a/apps/client/templates/client/formsCliente/cadastroCliente_list.html
+++ b/apps/client/templates/client/formsCliente/cadastroCliente_list.html
@@ -88,7 +88,7 @@
     </nav>
 
     <div class="text-center mt-4">
-        <a href="{% url 'homeAdmin' %}" class="btn btn-outline-primary">Voltar</a>
+        <a href="{% url 'home' %}" class="btn btn-outline-primary">Voltar</a>
     </div>
 </div>
 
