--- a/apps/service/templates/service/formsVenda/cadastroVenda_list.html
+++ b/apps/service/templates/service/formsVenda/cadastroVenda_list.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="text-center mt-4">
-        <a href="{% url 'homeAdmin' %}" class="btn btn-outline-primary">Voltar</a>
+        <a href="{% url 'home' %}" class="btn btn-outline-primary">Voltar</a>
     </div>
 </div>
 
