atualização para funcionamento do home

--- a/apps/agency/templates/pesquisarRota.html
+++ b/apps/agency/templates/pesquisarRota.html
@@ -83,7 +83,7 @@
                     <input type="text" placeholder="Digite o CEP" name="cep" required>
                 </label>
                 <button type="submit">Pesquisar</button>
-                <a class="btn btn-primary" href="{% url 'homeAdmin' %}" >Voltar</a>
+                <a class="btn btn-primary" href="{% url 'home' %}" >Voltar</a>
 
             </form>
         </div>
