--- a/apps/client/templates/buscasCliente/Resultados_procurarClientes.html
+++ b/apps/client/templates/buscasCliente/Resultados_procurarClientes.html
@@ -63,7 +63,7 @@
     {% endif %}
 
     <div class="text-center mt-4">
-        <a href="{% url 'AdminListagemCliente' %}" class="btn btn-outline-primary">Voltar para a Pesquisa</a>
+        <a href="{% url 'ListagemCliente' %}" class="btn btn-outline-primary">Voltar para a Pesquisa</a>
     </div>
 </div>
 
