--- a/apps/client/templates/buscasCliente/dadosCliente.html
+++ b/apps/client/templates/buscasCliente/dadosCliente.html
@@ -87,7 +87,7 @@
 
         </div>
 
-    <button class="btnvoltar"><a href="{% url 'AdminListagemCliente' %}">Voltar</a></button>
+    <button class="btnvoltar"><a href="{% url 'ListagemCliente' %}">Voltar</a></button>
 {% endfor %}
 
 
