--- a/apps/service/templates/buncasVendas/dadosVenda.html
+++ b/apps/service/templates/buncasVendas/dadosVenda.html
@@ -84,7 +84,7 @@
 
     </div>
 
-    <button class="btnvoltar"><a href="{% url 'AdminListagemVenda' %}">Voltar</a></button>
+    <button class="btnvoltar"><a href="{% url 'ListagemVenda' %}">Voltar</a></button>
 {% endfor %}
 
 
