--- a/apps/service/templates/buncasVendas/procurarVenda.html
+++ b/apps/service/templates/buncasVendas/procurarVenda.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="text-center mt-4">
-        <a href="{% url 'AdminListagemVenda' %}" class="btn btn-outline-primary">Voltar para a Pesquisa</a>
+        <a href="{% url 'ListagemVenda' %}" class="btn btn-outline-primary">Voltar para a Pesquisa</a>
     </div>
 
 </div>
