--- a/apps/service/templates/ranking/rank.html
+++ b/apps/service/templates/ranking/rank.html
@@ -50,7 +50,7 @@
     </div>
 
 </div>
-<a class="btn btn-primary" href="{% url 'homeAdmin' %}" style="display: block; text-align: center; margin: 0 auto; width: fit-content;">Voltar</a>
+<a class="btn btn-primary" href="{% url 'home' %}" style="display: block; text-align: center; margin: 0 auto; width: fit-content;">Voltar</a>
 
 </body>
 </html>
