--- a/apps/service/templates/service/Venda_confirm_delete.html
+++ b/apps/service/templates/service/Venda_confirm_delete.html
@@ -18,7 +18,7 @@
     <form method="POST">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Excluir</button>
-        <a href="{% url 'AdminListagemVenda' %}?page={{ request.GET.page }}" class="btn btn-primary">Cancelar</a>
+        <a href="{% url 'ListagemVenda' %}?page={{ request.GET.page }}" class="btn btn-primary">Cancelar</a>
     </form>
 </div>
 
