atualizações de css, e nomes.

--- a/apps/service/templates/ranking/rank.html
+++ b/apps/service/templates/ranking/rank.html
@@ -1,5 +1,5 @@
-<!doctype html>
 {% load static %}
+<!doctype html>
 
 <html lang="en">
 
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
 
-    <link href="{% static 'static/estilos/rank2.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/ranking/rank2.css' %}" rel="stylesheet" type="text/css">
 
-    <link href="{% static 'static/estilos/rank.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/ranking/rank.css' %}" rel="stylesheet" type="text/css"/>
 
     <title>Rank</title>
 </head>
