--- a/apps/agency/templates/pesquisarRota.html
+++ b/apps/agency/templates/pesquisarRota.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,70 +7,10 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/pesquisarRota.css' %}" rel="stylesheet" type="text/css"/>
+
+
     <title>Pesquisar Rota</title>
-    <style>
-        #map {
-            height: 700px;
-            width: 100%;
-            margin-top: 20px;
-            border-radius: 10px;
-            border: 2px solid #ddd;
-        }
-        body {
-            font-family: 'Roboto', Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        h2, h3 {
-            text-align: center;
-            color: #007bff;
-            margin-bottom: 20px;
-        }
-        .form-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            margin-bottom: 30px;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 15px;
-        }
-        button[type="submit"] {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        button[type="submit"]:hover {
-            background-color: #0056b3;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        li {
-            background-color: #fff;
-            padding: 15px;
-            margin-bottom: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        li strong {
-            color: #007bff;
-        }
-        p.text-muted {
-            text-align: center;
-            font-size: 1.1rem;
-        }
-    </style>
 </head>
 <body>
     <div class="container mt-5">
