--- a/apps/client/templates/client/Cliente_form.html
+++ b/apps/client/templates/client/Cliente_form.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
@@ -7,6 +8,8 @@
     <meta charset="UTF-8">
     <title>Registro de Cliente</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'global/css/form.css' %}"> 
+
 </head>
 <body>
 
