--- a/apps/service/templates/service/Vendas_form.html
+++ b/apps/service/templates/service/Vendas_form.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
@@ -7,31 +8,8 @@
    <title>Registro de Cliente</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> <!-- Biblioteca Axios para requisições HTTP -->
-
-
-
-     <style>
-
-
-      .hidden {
-          display: none;
-      }
-
-      .mb-3 {
-          margin-bottom: 1rem;
-      }
-
-       .alert {
-       display: inline-block;
-        padding: 10px 70px;
-        border-radius: 5px;
-        background-color: rgba(255, 189, 189, 0.82);
-        color: #000000; /
-        font-weight: bold;
-        border: 2px solid black;
-    }
-
-   </style>
+   <link rel="stylesheet" href="{% static 'global/css/form.css' %}"> 
+   <link rel="stylesheet" href="{% static 'css/vendaList.css' %}"> 
 
 </head>
 <body>
