--- a/apps/worker/templates/buscasFuncionario/Resultados_procurarFuncionario.html
+++ b/apps/worker/templates/buscasFuncionario/Resultados_procurarFuncionario.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultado da Pesquisa</title>
-    <link href="{% static 'estilos/dados_list.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'global/css/buscasFuncionario/dados_list.css' %}" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
@@ -51,7 +51,7 @@
                         <td><a href="{% url 'dadosFuncionario' cadastro.pk %}" class="text-decoration-none">{{ cadastro.first_name }} {{ cadastro.last_name }}</a></td>
                         <td>{{ cadastro.email }}</td>
                         <td>{{ cadastro.telefone }}</td>
-                        <td>{{ cadastro.cargo_atual }}</td>
+                        <td>{{ cadastro.departamento }}</td>
                         <td>{{ cadastro.comissao_acumulada }}</td>
                         <td>{{ cadastro.departamento_empresa }}</td>
                         <td>
@@ -70,7 +70,7 @@
     </div>
 
     <div class="text-center mt-4">
-        <a href="{% url 'AdminListagemFuncionario' %}" class="btn btn-outline-primary">Voltar para a Pesquisa</a>
+        <a href="{% url 'ListagemFuncionario' %}" class="btn btn-outline-primary">Voltar para a Pesquisa</a>
     </div>
 </div>
 
