--- a/apps/worker/templates/register/registro.html
+++ b/apps/worker/templates/register/registro.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
 {% load static %}
-{% load compress %}
+<!DOCTYPE html>
 
 <html lang="pt-br">
 <head>
@@ -8,10 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    {% compress css %}
-    <link rel="stylesheet" href="{% static 'css/registro.css' %}">
-    <link rel="stylesheet" href="{% static 'css/modal.css' %}">
-    {% endcompress %}
+    <link rel="stylesheet" href="{% static 'css/register/registro.css' %}">
+    <link rel="stylesheet" href="{% static 'css/register/modal.css' %}">
 </head>
 <body>
 <div>
