--- a/apps/worker/templates/worker/Funcionario_confirm_delete.html
+++ b/apps/worker/templates/worker/Funcionario_confirm_delete.html
@@ -5,7 +5,7 @@
 <head>
    <meta charset="UTF-8">
    <title> Excluír Tarefa</title>
-        <link href="{% static 'estilos/confirm_delete.css' %}" rel="stylesheet" type="text/css"/>
+        <link href="{% static 'global/css/confirm_delete.css' %}" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +19,7 @@
    {% csrf_token %}
    <button type="submit" class="btn btn-danger">Excluir</button>
 
-      <a href="{% url 'AdminListagemFuncionario' %}?page={{ request.GET.page }}" class="btn btn-primary">Cancelar</a>
+      <a href="{% url 'ListagemFuncionario' %}?page={{ request.GET.page }}" class="btn btn-primary">Cancelar</a>
 </form>
 
 </div>
