--- a/apps/worker/templates/worker/Funcionario_form.html
+++ b/apps/worker/templates/worker/Funcionario_form.html
@@ -1,11 +1,14 @@
+{% load static %}
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Registro de Funcionário</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'global/css/form.css' %}"> 
 </head>
 <body>
 <div class="container mt-5">
@@ -17,7 +20,7 @@
             <button type="submit" class="btn btn-primary">Salvar dados do funcionário</button>
         </form>
         <br>
-        <p><a class="btn btn-primary" href="{% url 'AdminListagemFuncionario' %}">Voltar</a></p>
+        <p><a class="btn btn-primary" href="{% url 'ListagemFuncionario' %}">Voltar</a></p>
     </div>
 </div>
 
@@ -26,16 +29,16 @@
     // Javascript para atualizar dinamicamente as opções de 'cargo_atual'
 document.addEventListener('DOMContentLoaded', function() {
     var situacaoField = document.getElementById('id_departamento');
-    var cargoField = document.getElementById('id_cargo_atual');
+    var cargoField = document.getElementById('id_especializacao_funcao');
 
     situacaoField.addEventListener('change', function() {
         var situacao = situacaoField.value;
 
-        if (situacao === "Adm.") {
+        if (situacao === "Adm") {
             cargoField.innerHTML = '<option value="Financeiro">Financeiro</option>';
         } else if (situacao === "Exec") {
             cargoField.innerHTML = '<option value="Executivo contas">Executivo contas</option>';
-        } else if (situacao === "Func.") {
+        } else if (situacao === "Vend") {
             cargoField.innerHTML = '<option value="Despachante">Despachante</option>' +
                                    '<option value="Despachante externo">Despachante externo</option>' +
                                    '<option value="Suporte Whatsapp">Suporte Whatsapp</option>';
