--- a/apps/worker/templates/worker/Funcionario_list.html
+++ b/apps/worker/templates/worker/Funcionario_list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listagem de Funcionários</title>
-    <link href="{% static 'estilos/dados_list.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'global/css/buscasFuncionario/dados_list.css' %}" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    {% if cadastro_list %}
+    {% if funcionario_list %}
         <div class="table-responsive">
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
@@ -40,17 +40,17 @@
                     </tr>
                 </thead>
                 <tbody>
-                {% for todo in cadastro_list %}
+                {% for funcionario in funcionario_list %}
                     <tr>
-                        <td><a href="{% url 'dadosFuncionario' todo.pk %}" class="text-decoration-none">{{ todo.pk }}</a></td>
-                        <td><a href="{% url 'dadosFuncionario' todo.pk %}" class="text-decoration-none">{{ todo.first_name }} {{ todo.last_name }}</a></td>
-                        <td>{{ todo.email }}</td>
-                        <td>{{ todo.telefone }}</td>
-                        <td>{{ todo.cargo_atual }}</td>
-                        <td>{{ todo.comissao_acumulada }}</td>
-                        <td>{{ todo.departamento_empresa }}</td>
+                        <td><a href="{% url 'dadosFuncionario' funcionario.pk %}" class="text-decoration-none">{{ funcionario.pk }}</a></td>
+                        <td><a href="{% url 'dadosFuncionario' funcionario.pk %}" class="text-decoration-none">{{ funcionario.first_name }} {{ funcionario.last_name }}</a></td>
+                        <td>{{ funcionario.email }}</td>
+                        <td>{{ funcionario.telefone }}</td>
+                        <td>{{ funcionario.departamento }}</td>
+                        <td>{{ funcionario.comissao_acumulada }}</td>
+                        <td>{{ funcionario.departamento_empresa }}</td>
                         <td class="botoestb">
-                            <a href="{% url 'funcionario_atualizar' pk=todo.pk %}" class="btn btn-secondary btn-sm {% if todo.finished_at %}disabled{% endif %}">
+                            <a href="{% url 'funcionario_atualizar' pk=funcionario.pk %}" class="btn btn-secondary btn-sm {% if funcionario.finished_at %}disabled{% endif %}">
                                 <img style="display: inline-block; width: 15px; height: 15px" src="{% static 'imagens/edit.svg' %}" alt="Editar"> Editar
                             </a>
                         </td>
