--- a/static/global/css/form.css
+++ b/static/global/css/form.css
@@ -7,21 +7,18 @@
     border: 1px solid transparent; /* Inicialmente sem borda */
 }
 
-.mb-3:nth-child(odd) {
+.mb-3:nth-child() {
     background-color: #ffffff; /* Fundo branco para itens ímpares */
 }
 
-.mb-3:nth-child(even) {
-    background-color: rgba(0, 0, 0, 0.05); /* Fundo cinza claro para itens pares */
-}
 
 .mb-3:hover {
-    background-color: #f0f0f0; /* Destaca ao passar o mouse */
+    background-color: rgba(255, 255, 255, 0.017)79696; /* Destaca ao passar o mouse */
     border-color: #007bff; /* Adiciona uma borda azul suave */
 }
 
 .form-label {
-    background-color: rgba(255, 255, 255, 0.1); /* Fundo cinza claro */
+    background-color: rgba(255, 255, 255, 0.2); /* Fundo cinza claro */
     padding: 5px 10px;
     border-radius: 5px;
     font-weight: bold;
