--- a/apps/worker/templates/worker/Funcionario_list.html
+++ b/apps/worker/templates/worker/Funcionario_list.html
@@ -37,7 +37,7 @@
                         <th>Nome</th>
                         <th>Email</th>
                         <th>Telefone</th>
-                        <th>Cargo</th>
+                        <th>Departamento</th>
                         <th>Comissão</th>
                         <th>Situação</th>
                         <th>Ações</th>
