--- a/apps/service/templates/service/Venda_list.html
+++ b/apps/service/templates/service/Venda_list.html
@@ -24,6 +24,11 @@
         </div>
     </div>
 
+
+<div id="caixa">
+      <h2 id="infosPesquisa">Você pode fazer pesquisas por cidade, nome, tipo de pagamento ou tipo de serviço.</h2>   
+</div>
+
     {% if cadastro_list %}
         <div class="table-responsive">
             <table class="table table-striped table-hover">
