--- a/apps/worker/templates/buscasFuncionario/dadosFuncionario.html
+++ b/apps/worker/templates/buscasFuncionario/dadosFuncionario.html
@@ -22,10 +22,10 @@
          <p><strong>Nome: </strong>{{ cadastro.first_name }} {{ cadastro.last_name }}</p>
         <p><strong>Email: </strong> {{ cadastro.email }}</p>
         <p><strong>Telefone: </strong> {{ cadastro.telefone }}</p>
-        <p><strong>Cargo: </strong> {{ cadastro.departamento }}</p>
+        <p><strong>Cargo: </strong> {{ cadastro.especializacao_funcao }}</p>
          <p><strong>Salario: </strong> {{ cadastro.salario }}</p>
-         <p><strong>Situação: </strong> {{ cadastro.departamento }}</p>
-         <p><strong>Situação na empre sa: </strong> {{ cadastro.departamento_empresa }}</p>
+         <p><strong>Departamento: </strong> {{ cadastro.departamento }}</p>
+         <p><strong>Situação na empresa: </strong> {{ cadastro.atividade }}</p>
         </div>
 
         <a href="{% url 'ListagemFuncionario' %}"><button class="btnvoltar">Voltar</button></a>
