--- a/apps/worker/templates/buscasFuncionario/procurarFuncionario.html
+++ b/apps/worker/templates/buscasFuncionario/procurarFuncionario.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultado da Pesquisa</title>
-    <link href="{% static css/buscasFuncionario/dados_list.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'global/css/buscasFuncionario/dados_list.css' %}" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
@@ -38,7 +38,7 @@
                     <th>Nome</th>
                     <th>Email</th>
                     <th>Telefone</th>
-                    <th>Cargo</th>
+                    <th>Departamento</th>
                     <th>Comissão</th>
                     <th>Situação</th>
                     <th>Ações</th>
@@ -53,11 +53,15 @@
                         <td>{{ cadastro.telefone }}</td>
                         <td>{{ cadastro.departamento }}</td>
                         <td>{{ cadastro.comissao_acumulada }}</td>
-                        <td>{{ cadastro.departamento_empresa }}</td>
+                        <td>{{ cadastro.atividade }}</td>
                         <td>
                             <a href="{% url 'funcionario_atualizar' pk=cadastro.pk %}" class="btn btn-secondary btn-sm {% if cadastro.finished_at %}disabled{% endif %}">
                                 <img style="display: inline-block; width: 15px; height: 15px" src="{% static 'imagens/edit.svg' %}" alt="Editar"> Editar
                             </a>
+                            <a href="{% url 'desligar_funcionario' pk=cadastro.pk %}?page={{ page_obj.number }}" class="btn btn-danger btn-sm {% if funcionario.id == user.id %}disabled{% endif %}">
+                                <img src="{% static 'imagens/delete.svg' %}" alt="Excluir" style="height: 15px; width: 15px;"> Desligar
+                            </a>
+
                         </td>
                     </tr>
                 {% empty %}
