--- a/static/global/css/buscasFuncionario/dados_list.css
+++ b/static/global/css/buscasFuncionario/dados_list.css
@@ -141,3 +141,18 @@ body {
     }
  }
  
+
+ #caixa {
+   position: fixed;
+   bottom: 10px; 
+   right: 10px;  
+   width: 400px;
+   background-color: #f0f0f0;
+   padding: 10px;
+   border-radius: 8px;
+   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+#infosPesquisa {
+   font-size: 15px; 
+}
