--- a/apps/worker/templates/home.html
+++ b/apps/worker/templates/home.html
@@ -20,8 +20,8 @@
        display: flex;
        align-items: center;
        justify-content: center;
-       background-color: #eeeef3;
-       color: #9dce63;
+       background-color: #201c1c;
+       color: white;
        padding: 10px 20px;
        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
    }
