--- a/apps/service/templates/service/Venda_list.html
+++ b/apps/service/templates/service/Venda_list.html
@@ -26,7 +26,7 @@
 
 
 <div id="caixa">
-      <h2 id="infosPesquisa">Você pode fazer pesquisas por cidade, nome, tipo de pagamento ou tipo de serviço.</h2>   
+      <h2 id="infosPesquisa">Você pode pesquisar por cidade, nome, tipo de pagamento ou tipo de serviço.</h2>   
 </div>
 
     {% if cadastro_list %}
