--- a/apps/agency/templates/agency/cadastroAgencia_list.html
+++ b/apps/agency/templates/agency/cadastroAgencia_list.html
@@ -23,7 +23,9 @@
             </form>
         </div>
     </div>
-
+    <div id="caixa">
+        <h2 id="infosPesquisa">Você pode pesquisar por nome de agência, nome de contato ou cnpj.</h2>   
+  </div>
     {% if cadastro_list %}
         <div class="table-responsive">
             <table class="table table-striped table-hover">
