--- a/apps/worker/templates/worker/Funcionario_form.html
+++ b/apps/worker/templates/worker/Funcionario_form.html
@@ -24,7 +24,6 @@
     </div>
 </div>
 
-
 <script>
     // Javascript para atualizar dinamicamente as opções de 'cargo_atual'
 document.addEventListener('DOMContentLoaded', function() {
@@ -48,5 +47,8 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+
+<script src="{% static 'js/format.js' %}" defer></script>
+
 </body>
 </html>
