--- a/apps/service/templates/service/Vendas_form.html
+++ b/apps/service/templates/service/Vendas_form.html
@@ -207,6 +207,7 @@
    </div>
 </div>
 
+<script src="{% static 'js/format_service.js' %}" defer></script>
 
 <script>
     function buscarCliente() {
@@ -306,6 +307,7 @@
     // Inicializar a exibição dos campos ao carregar a página
     window.onload = toggleFields;
 </script>
+
 
 
 </body>
