--- a/apps/agency/templates/agency/Agencia_form.html
+++ b/apps/agency/templates/agency/Agencia_form.html
@@ -8,32 +8,22 @@
     <title>Registro de Agencias</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'global/css/form.css' %}"> 
-
 </head>
 <body>
-
 <div class="container mt-5">
     <div class="right-section">
         <h2>Registro</h2><br>
-
-
-
-
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-primary" >Salvar dados da agencia</button>
+            <button type="submit" class="btn btn-primary">Salvar dados da agencia</button>
         </form>
-
         <br>
-
-       <a class="btn btn-primary" href="{% url 'home' %}">Voltar</a>
-
+        <a class="btn btn-primary" href="{% url 'home' %}">Voltar</a>
     </div>
-
-      <br>
+    <br>
 </div>
 
-
+<script src="{% static 'js/format_agency.js' %}" defer></script>
 </body>
 </html>
